# UR30-VLM-Object-Detection

./: COMPONENT_TESTING_SUMMARY.md  DOCKER_README.md  Dockerfile  GAZEBO_SIMULATION_SETUP.md  IK_equationsUR30.py  README.md  TODO_UPDATED.md  build_ros_workspace.sh  docker-compose.yml  docker-setup.sh  ik_robots.py  launch_gazebo_sim.sh  launch_sim.sh  launch_ur30_gazebo.sh  mapping.txt  restart_gazebo_ur30.sh  setup_environment.sh  start-docker.sh  todo_cleaned.txt  ur30_vlm_environment.yml  ur5e_vlm_environment.yml
vision/: CMakeLists.txt  README.md  UR30Kinematics.py  package.xml
vision/config/: simulation_controllers.yaml  simulation_controllers.yaml.sync  ur30_robotiq.srdf.xacro  ur30_simple_gripper.srdf.xacro  ur30_vision_moveit.rviz
vision/docs/: ARCHITECTURE_AND_OPERATIONS.md
vision/launch/: launch_gazebo_with_red_cube.py  test_unified_vision_system.py
vision/scripts/: calibrate_eye_in_hand.py  calibrate_hand_eye.py  check_camera_tf.py  comprehensive_macos_hri_test.py  create_sim_calibration.py  launch_eye_in_hand.py  load_controllers.sh  quick_gazebo_test.py  save_camera_view.py  set_observation_pose.sh  spawn_controllers.sh  test_command_publisher.py  test_gazebo_simple.py  test_gazebo_simulation.launch.py  test_pick_green_book.py  unified_vision_system_node.py
vision/testing/: accuracy_tester.py  test_2d_3d_transformation.py  test_camera_calibration_standalone.py  test_complete_construction_hri_with_rag.py  test_construction_phase_integration.py  test_grasp_detector_standalone.py  test_integrated_construction_hri.py  test_scipy_quaternions.py  (+5 more)
(+509 files in other folders)
